[package]
name = "knn_classifier"
version = "0.1.0"
edition = "2021"
authors = ["kujirahand<web@kujirahand.com>"]
description = "It is a simple library for solving classification problems using the k-nearest neighbor (k-nn) algorithm."
license = "MIT"
repository = "https://github.com/kujirahand/rust-knn-classifier"
keywords = ["k-nn", "algorithm", "classification", "machine learning", "ML"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
