[package]
name = "knn_classifier"
version = "0.1.1"
edition = "2021"
authors = ["kujirahand<web@kujirahand.com>"]
description = "This simple library is a classifier for the k-Nearest Neighbors (kNN/k-nn) algorithm."
license = "MIT"
repository = "https://github.com/kujirahand/rust-knn-classifier"
keywords = ["k-nn", "algorithm", "classification", "ML"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
